[metadata]
name = moody_chart
version = 0.1

url = https://github.com/MarkusPic/moody_chart
license = MIT
author = Markus Pichler
author_email = markus.pichler@tugraz.at
description = Create a calendar with each month separate. Week numbers as rows and day of the week names as columns.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = moody_chart
install_requires = file: requirements.txt
